Made schema alignment dialog shorter to fit on laptop screens. Make sure main menu bar doesn't stay above dialog overlays after it gets deactivated.
git-svn-id: http://google-refine.googlecode.com/svn/trunk@111 7d457c2a-affb-35e4-300a-418c747d4874

--- a/src/main/webapp/styles/schema-alignment-dialog.css
+++ b/src/main/webapp/styles/schema-alignment-dialog.css
@@ -1,5 +1,5 @@
 .schema-alignment-dialog-canvas {
-    height: 500px;
+    height: 400px;
     overflow: auto;
     border: 1px solid #aaa;
     padding: 10px;
@@ -66,7 +66,7 @@ a.schema-alignment-link-tag:hover {
 }
 
 div.schema-alignment-dialog-preview {
-    height: 500px;
+    height: 400px;
     overflow: auto;
     border: 1px solid #aaa;
     background: white;
